--- a/exercicios/aula 13 - Copia/estilos/style.css
+++ b/exercicios/aula 13 - Copia/estilos/style.css
@@ -19,12 +19,36 @@ header {
 }
 
 section {
+    display: grid;
     margin: auto;
     margin-top: 100px;
     background-color: white;
     width: 800px;
     height: 500px;
     border-radius: 10px;
+}
+
+section  p {
+    padding: 20px;
+    padding-left: 30px;
+}
+
+#kogos {
+    padding: 10px 20px;
+    margin-left: 30px;
+}
+
+#dados p {
+    padding-bottom: 20px;
+}
+
+img {
+    display: block;
+    margin: auto;
+    
+    width: 280px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.336);
 }
 
 footer {
