--- a/to_do_list/styles/style.css
+++ b/to_do_list/styles/style.css
@@ -52,7 +52,7 @@ input, select {
 
 /* ToDo Header */
 div#todo-container {
-    max-width: 540px;
+    max-width: 550px;
     margin: 3rem auto;
     background-color: #fdfdfd;
     padding: 1.5rem;
@@ -102,8 +102,9 @@ div#todo-container {
 #search {
     border-right: 1px solid #DDD;
     padding-right: 1rem;
+    margin-top: 1rem;
     margin-right: 1rem;
-    width: 65%;
+    width: 50%;
     display: flex;  
     flex-direction: column;
 }
@@ -118,11 +119,40 @@ div#todo-container {
 }
 
 #filter {
-    width: 35%;
+    width: 40%;
     display: flex;
     flex-direction: column;
 }
 
 #filter-select {
     flex: 1;
+}
+
+/* ToDo List*/
+.todo {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 1rem;
+    border-bottom: 1px solid #DDD;
+    transition: .3s;
+}
+
+.todo h3 {
+    flex: 1;
+    font-size: 0.9rem;
+}
+
+.todo button {
+    margin-left: 0.4rem;
+}
+
+.done {
+    background-color: #395169;
+}
+
+.done h3 {
+    color: #fff;
+    text-decoration: line-through;
+    font-style: italic;
 }
