--- a/calculadora/styles/style.css
+++ b/calculadora/styles/style.css
@@ -6,25 +6,24 @@
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-soomthing: grayscale;
+    font-family: 'Rubik';
+    letter-spacing: 0.02em;
 }
 
 body {
     width: 100vw;
     height: 100vh;
     background-color: #807ece;
-
-    display: grid;
-    place-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-body * {
-    font-family: 'Rubik';
-    letter-spacing: 0.02em;
-}
+
 
 div#calculator {
     width: 356px;
-    height: 566px;
+    
     background-color: #2d2a37;
     box-shadow: 
     0px 4px 4px rgba(0, 0, 0, 0.25) ,
@@ -36,11 +35,15 @@ div#calculator {
     inset 0px -4px 5px rgba(0, 0, 0, 0.22) 
     ;
     border-radius: 48px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 20px;
 }
 
 #display {
     margin-top: 54px;
     padding-inline: 54px;
+    
 }
 
 #last-calc {
@@ -48,16 +51,16 @@ div#calculator {
     font-size: 20px;
     line-height: 140%;
     color: #6b6b6b;
+    overflow-wrap: break-word;
 }
 
 #result {
     margin-top: 8px;
-    display: flex;
-    justify-content: space-between;
     font-size: 36px;
     line-height: 140%;
     color: #ebebeb;
     text-align: right;
+    overflow-wrap: break-word;
 }
 
 #result span {
@@ -100,6 +103,19 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+button:hover {
+    background-color: #6b6b6b56;
+}
+
+button.operadores:hover {
+    background-color: #7e45e2dc;
+}
+
+button.total:hover {
+    background-color: #975dfa;
+    
 }
 
 .clearall {
